k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-hpa-app
  annotations:
    keda-hpa-app.prometheus/scrape: "true"
    keda-hpa-app.prometheus/path: "/metrics"
    keda-hpa-app.prometheus/port: "5000"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keda-hpa-app
  template:
    metadata:
      labels:
        app: keda-hpa-app
        version: v1
    spec:
      serviceAccountName: keda-hpa-app
      containers:
      - image: sergio21/keda-hpa-app:0.0.3
        imagePullPolicy: IfNotPresent
        name: keda-hpa-app
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: 150Mi
            cpu: "0.5"
          requests:
            memory: 150Mi
            cpu: "0.2"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: keda-hpa-app-envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: insecure-port
telemetry:
  metrics:
    prometheus:
      disable: true
spec:
  gatewayClassName: keda-hpa-app-envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 5000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keda-hpa-app-route
spec:
  parentRefs: [ {name: insecure-port} ]
  hostnames: ["www.example.com"]
  rules:
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - {group: "", kind: Service, name: keda-hpa-app, port: 80, weight: 1}
---
apiVersion: v1
kind: Service
metadata:
  name: ambassador-monitor
  labels:
    service: ambassador-monitor
spec:
  selector:
    service: ambassador
    tier: frontend
  type: ClusterIP
  clusterIP: None
  ports:
  - name: prometheus-metrics
    port: 9102
    targetPort: 9102
    protocol: TCP
